3.6:
 - refactoring plugin
 - bugfixes in newstack, fid. model and alignment protocols
3.5.1:
  - CTF correction: get rid of the decorator. Manage the failed TS in the createOutputStep.
  - Fix a bug in the base class for the generation of alignment files when there input TS are not aligned and there
    aren't excluded views.
  - Fix a bug in the generation of defocus files.
3.5.0:
 Users:
  - Protocols' help added.
  - Help of the parameters was enhanced.
  - New feature: patch tracking alignment added.
  - Trimming options in fiducial model added
  - The order of the parameters in the forms was slightly modified according to the user actions.
  - Protocol CTF correction:
    * Now it can deal with excluded views in the CTF and/or in the TS.
    * The same when entering with interpolated or not aligned TS.
    * The xf, defocus, and tlt files are generated inside each TS extra sub-directory.
 Developers:
  - Update the acquisition order in the CTFTomo objects (field added to that class in scipion-em-tomo v3.7.0).
  - Refactorization: avoid the excessive usage of getFirstItem.
  - File generation methods (most of them in utils) adapted to the CTF-TS intersection functionality.
  - Fixing sorted dictionary in ctf correction. How to access the defocus list in utils.py
3.3.0:
  - bugfix for import ctf, set missing defocus flag
  - move plugin-specific import CTF protocol to the core
  - add IMOD 4.11.25 version
  - Prevent viewers from locking the screen focus.
  - tilt series normalization: defines possible outputs
  - tomo preprocess: always outputs mrc file
3.2.4: bug fixed in odd-even management in CTF correction
3.2.3: declare requirements.txt in manifest
3.2.2:
  - Add requirements
3.2.1:
  - Fixing a bug with odd even in tomogram reconstruction
  - Tolerating errors in alignment
  - Making tomogram reconstruction error tolerant
  - Making tilt series alignment error tolerant
  - Adding possible outputs in xray eraser