@@ -1,6 +1,16 @@
 3.6:
- - refactoring plugin
- - bugfixes in newstack, fid. model and alignment protocols
+  - move constants to the dedicated file
+  - remove BETA status
+  - fix default params (close check default values #281 )
+  - unify runProgram , use params dict
+  - unify close outputs step
+  - add possible outputs to all protocols
+  - reduce number of get() queries
+  - change several form params from Enum to Boolean and from Float to Int, change default values from wrong str to int/float
+  - do convert to float and normalize stacks in preXcorr
+  - fix other newstack options tapering, antialias etc.
+  - unify failed output set creation
+  - replace try/except decorator
 3.5.1:
   - CTF correction: get rid of the decorator. Manage the failed TS in the createOutputStep.
   - Fix a bug in the base class for the generation of alignment files when there input TS are not aligned and there
